# ChangeLog for games-strategy/warzone2100-rebalance
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 May 2009; Piotr Szymaniak <lazy_bum@o2.pl>
  -warzone2100-rebalance-0.4.1.ebuild, +warzone2100-rebalance-0.5.1.ebuild:
  Bump.

  16 Apr 2009; Piotr Szymaniak <lazy_bum@o2.pl>
  -warzone2100-rebalance-0.4.0.1.ebuild,
  +warzone2100-rebalance-0.4.2.ebuild:
  Version bump.

  11 Apr 2009; Piotr Szymaniak <lazy_bum@o2.pl>
  +warzone2100-rebalance-0.4.1.ebuild:
  Version bump.

  27 Mar 2009; Piotr Szymaniak <lazy_bum@o2.pl>
  +warzone2100-rebalance-0.4.0.1.ebuild:
  Initial ebuild (thanks to shade).
