@@ -1,5 +1,3 @@
-DIST rebalance_0.4.2.wz 178216 RMD160 d47c4cd16b8bd76dbd6bc7e1d79810771e6baaa2 SHA1 6d00349fc67fe30ae63b92158d2be5b2f163a9c7 SHA256 ee3f3fa40d5966132055aeac1cc3b9596a00474ebf1b51e61dbcb4c9bf852c8e
 DIST rebalance_0.5.1.wz 211324 RMD160 8240e27b0b65beab4f3932d3125af6b5b4f445cf SHA1 0d510ebed87d4c842e7a77aff6db8ac00715961e SHA256 9e0385a486a2f515f7c5f470e1ae8dd9d2e35c530526c167646a9a6f5e12d06c
-EBUILD warzone2100-rebalance-0.4.2.ebuild 1039 RMD160 d6d99eb5b7e26b20ef8168ceef5efe1d52ca03de SHA1 882778d9873e62c5b7d7da45e8180738208f729a SHA256 92bc5d99bc36d0abc2e6023805cf04d7758358e6a1e516359063dc1bcc78e548
-EBUILD warzone2100-rebalance-0.5.1.ebuild 1042 RMD160 95793e950e5f0e0be8cd466d5116f65913ec2dbf SHA1 6bcf8c3e33601172917fb52354e99cf2287c5076 SHA256 4575d4ed0dbff2d55a02b8e29cd0640d97f007319d2cc18b0610dba3a9aa4c82
-MISC ChangeLog 645 RMD160 59d3a3d172205275f0c950fbbfbf5e96977501e8 SHA1 5397ad77d8c66c46ab8494302448a86ed05771f7 SHA256 638eb6d7ce06afad53f3806c348af3176bb991d5b95df530b6d6bbdaebf06f57
+EBUILD warzone2100-rebalance-0.5.1.ebuild 1039 RMD160 55a5a85de5c8a0e81ec9c00b364ca63c41d7c0df SHA1 8cd484bd51ac000e453c98455ea7c6d45fa94731 SHA256 e2acf29d7bfe72c88443abb998432559aefd49a9cda4819172f65dd8a39d657b
+MISC ChangeLog 788 RMD160 9b40e69f6bdbe55c2b177db6f7daac7e76c720ad SHA1 12d7e2d479dd122f56ea887e3a0e790dbd3d319a SHA256 c58c3af8f7d60bb5a3486dd1b5a713b212ae449cd37f772148b72e0d0b21b116
