@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Jun 2009; Piotr Szymaniak <lazy_bum@o2.pl>
+  -warzone2100-rebalance-0.4.2.ebuild, warzone2100-rebalance-0.5.1.ebuild:
+  Updated RDEPEND.
+
   28 May 2009; Piotr Szymaniak <lazy_bum@o2.pl>
   -warzone2100-rebalance-0.4.1.ebuild, +warzone2100-rebalance-0.5.1.ebuild:
   Bump.
